# Traffic-Analysis-Tools

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: filter.txt
data/denim/: data.csv  settings.json
data/denim-1st-capture/: denim-data.csv  settings.json
data/denim-20c-01d/: data.csv  filter.txt  settings.json
data/denim-5c-01d/: data.csv  filter.txt  settings.json
data/denim-client0-client1-com/: denim.pcapng
data/denim/denim_20c_2m/: data.csv  settings.json
data/denim/denim_20c_4m/: data.csv  settings.json
data/denim/denim_20c_8m/: settings.json
data/denim_burst/denim_20c_10m_0/: settings.json
data/denim_burst/denim_20c_10m_1/: settings.json
data/denim_burst/denim_20c_10m_2_r/: settings.json
data/denim_burst/denim_20c_8m_0.1q_r/: settings.json
data/denim_burst/denim_20c_8m_0_r/: settings.json
data/denim_burst/denim_20c_8m_3/: settings.json
data/denim_burst/denim_20c_8m_4/: settings.json
data/denim_burst/denim_6c_1m_0_r/: settings.json
data/denim_burst/denim_6c_1m_r/: clients-ports.txt  settings.json
data/denim_burst/denim_6c_8m_r/: settings.json
data/signal_1000c_100r_r/: settings.json
data/signal_100c_1000r_g/: client_behaviour  settings.json
data/signal_100c_1000r_r/: data.csv  settings.json
data/signal_100c_100r_g/: client_behaviour  settings.json
data/signal_100c_100r_r/: data.csv  settings.json
data/signal_100c_10r_g/: data.csv  settings.json
data/signal_100c_10r_r/: data.csv  settings.json
data/signal_10c_100r_g/: client_behaviour  data.csv  settings.json
data/signal_10c_100r_r/: data.csv  settings.json
data/signal_data_dump_100c_1000r_01_g_25/: data.csv  settings.json
data/signal_data_dump_100c_100r_01_g_25/: data.csv  settings.json
data/signal_data_dump_100c_100r_01_r/: data.csv  settings.json
src/bnsda/: main.py
src/helper/: denim_out_parser.py  dsda_selected_profiling.py  sda_profiling.py  sda_selected_profiling.py  util.py
src/nsda/: main.py
src/pla/: main.py
src/pmda/: main.py
src/sda/: main.py
src/simple_sda/: main.py
src/tats/: __init__.py
(+139 files in other folders)
