[project]
name = "tats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "darkros", email = "madsmario@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.15.0",
    "pandas",
    "pandas-stubs",
    "pygmtools>=0.5.3",
    "ruff>=0.9.6",
]

[project.scripts]
tats = "tats:executor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
builtins = ["_"]
fix = true
line-length = 120
preview = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
preview = true
